--- a/src/feature/homepage/component/midsection/styles.module.scss
+++ b/src/feature/homepage/component/midsection/styles.module.scss
@@ -45,16 +45,19 @@
       .content {
         width: 316px;
         height: 481px;
-        background-color: #fafafa;
+
         .downwardDesign {
+          width: 100%;
+          height: 2;
+          background-color: #fafafa;
           display: flex;
           gap: 4px;
           flex-direction: column;
-          padding: 10px 0px 10px 10px;
+          padding: 10px 0px 20px 10px;
           .text {
             display: flex;
             flex-direction: column;
-            gap: 4px;
+            gap: 2px;
             h1 {
               width: 160px;
               height: 25px;
@@ -113,6 +116,14 @@
               border-radius: 30px;
               border: #db5825;
               background-color: #db5825;
+              p {
+                font-family: Open Sans;
+                font-weight: 500;
+                font-size: 14px;
+                line-height: 100%;
+                letter-spacing: 0%;
+                color: #fff;
+              }
             }
           }
         }
