--- a/src/feature/homepage/component/navbar/styles.module.scss
+++ b/src/feature/homepage/component/navbar/styles.module.scss
@@ -4,13 +4,20 @@
   // // background-size: cover;
   // background-repeat: no-repeat;
   position: relative;
+  // width: 100%;
   .img {
     position: absolute;
     left: 0;
     z-index: -1;
     top: 0;
     transform: none !important;
+    @media (max-width: 768px) {
+      width: 91px;
+      height: 73px;
+      left: 0;
+    }
   }
+
   .Navbar {
     width: 100%;
     // max-width: 1321px;
@@ -19,11 +26,31 @@
     justify-content: space-between;
     align-items: center;
     padding: 20px 50px;
+    @media (max-width: 768px) {
+      padding: 6px 16px;
+    }
+    .hamburg {
+      display: none;
+      @media (max-width: 768px) {
+        display: flex;
+      }
+    }
+    .link {
+      .headerImg {
+        @media (max-width: 768px) {
+          width: 112px;
+          height: 28px;
+        }
+      }
+    }
 
     .list {
       width: 446px;
       // height: 23px;
       height: 26px;
+      @media (max-width: 768px) {
+        display: none;
+      }
 
       ul {
         list-style: none;
@@ -87,6 +114,9 @@
       .inputField {
         position: relative;
         width: 100%;
+        @media (max-width: 768px) {
+          display: none;
+        }
         //   max-width: 243px;
 
         .field {
