--- a/src/feature/billings/component/content-one/styles.module.scss
+++ b/src/feature/billings/component/content-one/styles.module.scss
@@ -4,17 +4,24 @@
   padding-bottom: 45px;
   padding-left: 60px;
   padding-right: 60px;
+  @media (max-width: 768px) {
+    padding: 16px 20px;
+  }
   .bill {
     // padding-left: 60px;
     display: flex;
     align-items: center;
     gap: 10px;
+    @media (max-width: 768px) {
+    }
     p {
       font-family: Roboto Serif;
       font-weight: 400;
       font-size: 24px;
       line-height: 24px;
       letter-spacing: 0%;
+      @media (max-width: 768px) {
+      }
     }
   }
   .wrappers {
@@ -23,21 +30,34 @@
     // gap: 50px;
     padding-top: 45px;
     padding-bottom: 45px;
+    @media (max-width: 768px) {
+      padding: 0px;
+      margin: 20px 0px 20px 0px;
+      flex-direction: column;
+    }
     .forms {
       width: 100%;
       max-width: 752px;
+      @media (max-width: 768px) {
+      }
 
       form {
         display: flex;
         flex-direction: column;
         // gap: 24px;
         gap: 16px;
+        @media (max-width: 768px) {
+        }
         p {
           font-family: Manrope;
           font-weight: 700;
           font-size: 20px;
           line-height: 100%;
           letter-spacing: 0%;
+          @media (max-width: 768px) {
+            font-family: Open Sans;
+            font-size: 16px;
+          }
         }
 
         .submit {
@@ -45,16 +65,25 @@
           grid-template-columns: repeat(2, 1fr);
           grid-template-rows: repeat(2, 1fr);
           gap: 10px;
+          @media (max-width: 768px) {
+            grid-template-columns: repeat(1, 1fr);
+            grid-template-rows: repeat(4, 1fr);
+          }
           // gap: 8px;
           .Tag {
             display: flex;
             flex-direction: column;
             gap: 8px;
+            @media (max-width: 768px) {
+              gap: 6px;
+            }
             // gap: 4px;
             .nameTag {
               display: flex;
               align-items: center;
               gap: 4px;
+              @media (max-width: 768px) {
+              }
               p {
                 font-family: Poppins;
                 font-weight: 400;
@@ -63,6 +92,9 @@
                 letter-spacing: 0%;
                 vertical-align: middle;
                 color: #7a7a7a;
+                @media (max-width: 768px) {
+                  font-family: Open Sans;
+                }
               }
             }
             .inputs {
@@ -71,6 +103,10 @@
               border-radius: 4px;
               width: 308px;
               height: 36px;
+              @media (max-width: 768px) {
+                width: 100%;
+                // height: auto;
+              }
             }
           }
         }
@@ -80,16 +116,26 @@
         display: flex;
         flex-direction: column;
         gap: 20px;
+        @media (max-width: 768px) {
+          width: 100%;
+          justify-content: space-between;
+        }
         h3 {
           font-family: Manrope;
           font-weight: 700;
           font-size: 20px;
           line-height: 100%;
           letter-spacing: 0%;
+          @media (max-width: 768px) {
+          }
         }
         .flx {
           display: flex;
           gap: 28px;
+          @media (max-width: 768px) {
+            gap: 0px;
+            justify-content: space-between;
+          }
           .ship {
             display: flex;
             width: 141px;
@@ -103,6 +149,9 @@
             border-radius: 4px;
             background-color: #f5f5f5;
             border: 1px solid #e1e1e1;
+            @media (max-width: 768px) {
+              width: 161px;
+            }
             p {
               font-family: Poppins;
               font-weight: 400;
@@ -110,6 +159,8 @@
               line-height: 28px;
               letter-spacing: 0%;
               color: #7a7a7a;
+              @media (max-width: 768px) {
+              }
             }
           }
           .ships {
@@ -125,12 +176,17 @@
             border-radius: 4px;
             background-color: #f2d2c5;
             border: 1px solid #df845f;
+            @media (max-width: 768px) {
+              width: 161px;
+            }
             p {
               font-family: Poppins;
               font-weight: 400;
               font-size: 12px;
               line-height: 28px;
               letter-spacing: 0%;
+              @media (max-width: 768px) {
+              }
             }
           }
         }
@@ -140,14 +196,23 @@
         display: flex;
         flex-direction: column;
         gap: 22px;
+        @media (max-width: 768px) {
+          gap: 10px;
+        }
         .tag {
           display: flex;
           flex-direction: column;
           gap: 8px;
+          @media (max-width: 768px) {
+            gap: 6px;
+            width: 100%;
+          }
           .nameTag {
             display: flex;
             align-items: center;
             gap: 4px;
+            @media (max-width: 768px) {
+            }
             p {
               font-family: Poppins;
               font-weight: 400;
@@ -155,6 +220,8 @@
               line-height: 28px;
               letter-spacing: 0%;
               color: #7a7a7a;
+              @media (max-width: 768px) {
+              }
               // vertical-align: middle;
             }
           }
@@ -164,6 +231,9 @@
             border-radius: 4px;
             border: 1px solid #e1e1e1;
             background-color: #f5f5f5;
+            @media (max-width: 768px) {
+              width: 100%;
+            }
           }
         }
       }
@@ -172,23 +242,35 @@
         margin-top: 12px;
         margin-bottom: 12px;
         width: 100%;
+        @media (max-width: 768px) {
+        }
 
         form {
           display: grid;
           grid-template-columns: repeat(2, 1fr);
+          @media (max-width: 768px) {
+            grid-template-columns: repeat(1, 1fr);
+          }
 
           .submits {
             display: flex;
             gap: 4px;
+            @media (max-width: 768px) {
+              flex-direction: column;
+            }
           }
           .tag {
             display: flex;
             flex-direction: column;
             gap: 8px;
+            @media (max-width: 768px) {
+            }
             .nameTag {
               display: flex;
               align-items: center;
               gap: 4px;
+              @media (max-width: 768px) {
+              }
               p {
                 font-family: Poppins;
                 font-weight: 400;
@@ -196,6 +278,8 @@
                 line-height: 28px;
                 letter-spacing: 0%;
                 color: #7a7a7a;
+                @media (max-width: 768px) {
+                }
               }
             }
             input {
@@ -204,6 +288,9 @@
               border-radius: 4px;
               border: 1px solid #e1e1e1;
               background-color: #f5f5f5;
+              @media (max-width: 768px) {
+                width: 100%;
+              }
             }
           }
         }
@@ -215,12 +302,16 @@
           display: flex;
           gap: 8px;
           align-items: center;
+          @media (max-width: 768px) {
+          }
           p {
             font-family: Poppins;
             font-weight: 400;
             font-size: 14px;
             line-height: 28px;
             letter-spacing: 0%;
+            @media (max-width: 768px) {
+            }
           }
         }
       }
@@ -234,18 +325,25 @@
         margin-bottom: 20px;
         // height: 240px;
         gap: 32px;
+        @media (max-width: 768px) {
+          display: none;
+        }
         .flx {
           display: flex;
           // gap: 24px;
           justify-content: space-between;
           align-items: center;
           width: 538px;
+          @media (max-width: 768px) {
+          }
 
           // height: 51px;
           .content {
             display: flex;
             gap: 24px;
             align-items: center;
+            @media (max-width: 768px) {
+            }
 
             .contentName {
               font-family: Open Sans;
@@ -253,6 +351,8 @@
               font-size: 16px;
               line-height: 100%;
               letter-spacing: 0%;
+              @media (max-width: 768px) {
+              }
               // text-align: center;
               // vertical-align: middle;
             }
@@ -264,6 +364,8 @@
             line-height: 100%;
             letter-spacing: 0%;
             color: #7a7a7a;
+            @media (max-width: 768px) {
+            }
           }
         }
       }
@@ -272,11 +374,18 @@
         flex-direction: column;
         gap: 16px;
         margin-bottom: 30px;
+        @media (max-width: 768px) {
+          margin-top: 10px;
+          margin-bottom: 10px;
+          width: 100%;
+        }
         .content {
           display: flex;
           justify-content: space-between;
           padding-bottom: 5px;
           border-bottom: 1px solid #f5f5f5;
+          @media (max-width: 768px) {
+          }
 
           .txt {
             font-family: Open Sans;
@@ -284,6 +393,8 @@
             font-size: 16px;
             line-height: 24px;
             letter-spacing: 0%;
+            @media (max-width: 768px) {
+            }
           }
           .digit {
             font-family: Open Sans;
@@ -291,6 +402,10 @@
             font-size: 16px;
             line-height: 24px;
             letter-spacing: 0%;
+            @media (max-width: 768px) {
+              font-family: Poppins;
+              font-weight: 400;
+            }
           }
         }
       }
@@ -301,24 +416,35 @@
         flex-direction: column;
         gap: 20px;
         margin-bottom: 15px;
+        @media (max-width: 768px) {
+          gap: 28px;
+        }
         .bankRow {
           display: flex;
           justify-content: space-between;
+          @media (max-width: 768px) {
+          }
           .bankCard {
             display: flex;
             align-items: center;
             gap: 16px;
+            @media (max-width: 768px) {
+            }
             .bank {
               font-family: Poppins;
               font-weight: 400;
               font-size: 16px;
               line-height: 24px;
               letter-spacing: 0%;
+              @media (max-width: 768px) {
+              }
             }
           }
           .brandImg {
             display: flex;
             align-items: center;
+            @media (max-width: 768px) {
+            }
           }
         }
         .cashRow {
@@ -326,12 +452,16 @@
             display: flex;
             gap: 16px;
             align-items: center;
+            @media (max-width: 768px) {
+            }
             .delivery {
               font-family: Poppins;
               font-weight: 400;
               font-size: 16px;
               line-height: 24px;
               letter-spacing: 0%;
+              @media (max-width: 768px) {
+              }
             }
           }
         }
@@ -340,14 +470,24 @@
         display: flex;
         flex-direction: column;
         gap: 32px;
+        @media (max-width: 768px) {
+          width: 100%;
+        }
         .space {
           display: flex;
           gap: 16px;
+          @media (max-width: 768px) {
+            justify-content: space-between;
+            row-gap: 0px;
+          }
           .code {
             width: 300px;
             height: 56px;
             border-radius: 4px;
             border: 0.5px solid #db5825;
+            padding: 16px 0px 16px 16px;
+            @media (max-width: 768px) {
+            }
             p {
               // width: 112px;
               // height: 24px;
@@ -361,6 +501,10 @@
               line-height: 24px;
               letter-spacing: 0%;
               color: #db5825;
+              @media (max-width: 768px) {
+              }
+              // top: 16px;
+              // left: 24px;
             }
           }
           .apply {
@@ -373,6 +517,8 @@
             border-radius: 4px;
             background-color: #db5825;
             border: 1px solid #db5825;
+            @media (max-width: 768px) {
+            }
             p {
               width: 115px;
               height: 24px;
@@ -382,6 +528,8 @@
               line-height: 24px;
               letter-spacing: 0%;
               color: #fafafa;
+              @media (max-width: 768px) {
+              }
             }
           }
         }
@@ -396,6 +544,9 @@
           border-radius: 4px;
           background-color: #db5825;
           border: 1px solid #db5825;
+          @media (max-width: 768px) {
+            width: 100%;
+          }
           p {
             font-family: Poppins;
             font-weight: 500;
@@ -403,6 +554,8 @@
             line-height: 24px;
             letter-spacing: 0%;
             color: #fafafa;
+            @media (max-width: 768px) {
+            }
           }
         }
       }
