--- a/src/feature/detail/component/hero/styles.module.scss
+++ b/src/feature/detail/component/hero/styles.module.scss
@@ -1,18 +1,26 @@
 .wrapper {
   width: 100%;
   height: fit-content;
+  padding-bottom: 6rem;
   .header {
     position: relative;
     width: 100%;
     height: 275px;
     opacity: 90%;
     padding-bottom: 3rem;
+    @media (max-width: 768px) {
+    }
 
     .image {
       width: 100%;
       height: 100%;
       object-fit: cover;
       display: block;
+      @media (max-width: 768px) {
+        position: absolute;
+        z-index: 0;
+        filter: blur(6px);
+      }
     }
     .alignCenter {
       position: absolute;
@@ -23,6 +31,9 @@
       display: flex;
       flex-direction: column;
       gap: 41px;
+      @media (max-width: 768px) {
+        gap: 22px;
+      }
       h1 {
         font-family: Roboto Serif;
         font-weight: 700;
@@ -30,6 +41,8 @@
         line-height: 100%;
         letter-spacing: 0%;
         // text-align: center;
+        @media (max-width: 768px) {
+        }
       }
       p {
         width: 340px;
@@ -41,21 +54,66 @@
         letter-spacing: 0%;
         text-align: center;
         color: #1d1d1d;
+        @media (max-width: 768px) {
+          width: 271px;
+          height: 32px;
+          font-size: 14px;
+        }
       }
     }
   }
   .icon {
     margin-left: 60px;
+    @media (max-width: 768px) {
+      display: none;
+    }
+  }
+  .contentOne {
+    display: none;
+    @media (max-width: 768px) {
+      display: flex;
+      gap: 10px;
+      align-items: center;
+      padding: 20px 16px;
+    }
+    .check_icon {
+      width: 27px;
+      height: 23px;
+    }
+    .all {
+      display: flex;
+      align-items: center;
+      gap: 10px;
+      p {
+        width: 19px;
+        height: 22px;
+        font-family: Open Sans;
+        font-weight: 400;
+        font-size: 16px;
+        line-height: 100%;
+        letter-spacing: 0%;
+      }
+      .drop_down {
+        height: 24px;
+        width: 24px;
+      }
+    }
   }
 
   .delete_product_catalogue {
     display: flex;
     flex-direction: column;
     padding: 45px 60px 60px 60px;
+    @media (max-width: 768px) {
+      padding: 20px 16px;
+    }
     .product_design {
       display: grid;
       grid-template-columns: repeat(4, 1fr);
       gap: 18px;
+      @media (max-width: 768px) {
+        justify-content: space-between;
+      }
       .product {
         width: 100%;
         height: 100%;
@@ -63,14 +121,21 @@
         display: flex;
         flex-direction: column;
         border-radius: 8px;
+        @media (max-width: 768px) {
+          display: none;
+        }
         .imgHandle {
           width: 100%;
           height: 320px;
+          @media (max-width: 768px) {
+          }
           img {
             width: 100%;
             height: 100%;
             object-fit: cover;
             border-radius: 8px 8px 0 0;
+            @media (max-width: 768px) {
+            }
           }
         }
         .downDesign {
@@ -78,16 +143,22 @@
           height: 161px;
           padding: 15px 10px 30px 10px;
           background-color: #f6f4f2;
+          @media (max-width: 768px) {
+          }
           .firstContent {
             display: flex;
             flex-direction: column;
             gap: 4px;
+            @media (max-width: 768px) {
+            }
 
             p {
               font-family: Open Sans;
               font-weight: 400;
               font-size: 16px;
               line-height: 100%;
+              @media (max-width: 768px) {
+              }
             }
 
             h3 {
@@ -95,6 +166,8 @@
               font-weight: 500;
               font-size: 20px;
               line-height: 100%;
+              @media (max-width: 768px) {
+              }
             }
           }
 
@@ -102,6 +175,8 @@
             display: flex;
             gap: 12px;
             flex-direction: column;
+            @media (max-width: 768px) {
+            }
 
             .btn {
               width: 96px;
@@ -114,6 +189,8 @@
               background-color: #db5825;
               outline: none;
               border: 1px solid #db5825;
+              @media (max-width: 768px) {
+              }
               p {
                 width: 76px;
                 height: 19px;
@@ -123,6 +200,99 @@
                 line-height: 100%;
                 letter-spacing: 0%;
                 color: #fff;
+                @media (max-width: 768px) {
+                }
+              }
+            }
+          }
+        }
+      }
+      .mobileProduct {
+        display: none;
+        @media (max-width: 768px) {
+          width: 100%;
+          height: 100%;
+          overflow: hidden;
+          display: flex;
+          flex-direction: column;
+          border-radius: 2.18px;
+        }
+        .imgHandle {
+          width: 100%;
+          height: 87px;
+          img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+          }
+        }
+        .downDesign {
+          width: 100%;
+          height: auto;
+          padding: 0.25px 0.25px 0px 0.25px;
+          background-color: #f6f4f2;
+          .MobileContent {
+            width: auto;
+            height: 25px;
+            .prod {
+              font-family: Open Sans;
+              font-weight: 400;
+              font-size: 10px;
+              line-height: 100%;
+              letter-spacing: 0%;
+            }
+            .currency {
+              font-family: Open Sans;
+              font-weight: 700;
+              font-size: 8px;
+              line-height: 100%;
+              letter-spacing: 0%;
+              color: #db5825;
+            }
+          }
+          .last {
+            height: auto;
+            width: auto;
+            display: flex;
+            flex-direction: column;
+            gap: 3.26px;
+            .btnSpace {
+              display: flex;
+              gap: 3.26px;
+              align-items: center;
+              .btn {
+                width: 39px;
+                height: 12px;
+                gap: 2.72px;
+                border-radius: 8.16px;
+                padding: 2px;
+                border: 0.27px solid #000000;
+                p {
+                  font-family: Open Sans;
+                  font-weight: 500;
+                  font-size: 6px;
+                  line-height: 100%;
+                  letter-spacing: 0%;
+                }
+              }
+              .btnRed {
+                width: 37px;
+                height: 12px;
+                gap: 2.72px;
+                border-radius: 8.16px;
+                padding: 2px;
+                border: 0.27px solid #db5825;
+                background-color: #db5825;
+                p {
+                  width: 33px;
+                  height: 8px;
+                  font-family: Open Sans;
+                  font-weight: 500;
+                  font-size: 6px;
+                  line-height: 100%;
+                  letter-spacing: 0%;
+                  color: #fff;
+                }
               }
             }
           }
