--- a/src/feature/homepage/component/featured-product/styles.module.scss
+++ b/src/feature/homepage/component/featured-product/styles.module.scss
@@ -7,6 +7,10 @@
   width: 100%;
   position: relative;
   padding-bottom: 6rem;
+  @media (max-width: 768px) {
+    padding-bottom: 2rem;
+    height: 146px;
+  }
   // background-color: #FAFAFA;
 
   .rotate {
@@ -14,6 +18,11 @@
     z-index: -1;
     right: 0;
     top: 80px;
+    @media (max-width: 768px) {
+      // width: 225px;
+      // top: 0;
+      display: none;
+    }
   }
   .flx {
     width: 100%;
@@ -24,15 +33,20 @@
     scrollbar-width: none;
     -ms-overflow-style: none;
     margin-bottom: 20px;
-    // .image {
-    //   flex: 0 0 auto;
-    //   width: 256px;
-    //   height: 423px;
-    //   img {
-    //     width: 100%;
-    //     height: 100%;
-    //     object-fit: cover;
-    //   }
-    // }
+    .image {
+      width: 100%;
+      height: 100%;
+
+      img {
+        object-fit: cover;
+        width: 255px;
+        height: 423px;
+        border-radius: 15px;
+        @media (max-width: 768px) {
+          width: 100%;
+          height: 120px;
+        }
+      }
+    }
   }
 }
