--- a/src/feature/homepage/component/midsection/styles.module.scss
+++ b/src/feature/homepage/component/midsection/styles.module.scss
@@ -3,6 +3,8 @@
   width: 100%;
   padding-top: 2rem;
   padding-bottom: 3rem;
+  @media (max-width: 768px) {
+  }
   .header {
     width: 1440px;
     max-width: 100%;
@@ -10,7 +12,12 @@
     display: flex;
     align-items: center;
     flex-direction: column;
-    // justify-content: center;
+    @media (max-width: 768px) {
+      width: 100%;
+      max-width: 100%;
+      // display: block;
+      padding: 16px;
+    }
 
     h1 {
       font-family: Roboto Serif;
@@ -20,35 +27,51 @@
       font-size: 48px;
       line-height: 48px;
       letter-spacing: 4%;
-      text-align: center; // Uncommented and enabled
+      text-align: center;
       display: flex;
       align-items: center;
       justify-content: center;
-      //   text-align: center;
-      //   text-transform: capitalize;
+      @media (max-width: 768px) {
+        display: block;
+        width: 100%;
+        max-width: 327px;
+        height: 52px;
+        font-size: 25px;
+        line-height: 26px;
+        letter-spacing: 4%;
+        text-align: center;
+      }
     }
   }
   .container {
     display: flex;
-    // align-items: center;
-    // justify-content: center;
+
     padding-left: 60px;
     padding-right: 60px;
     flex-direction: column;
     margin: 0 auto;
     gap: 10px;
     width: 100%;
+    @media (max-width: 768px) {
+      padding: 0px 16px;
+    }
 
     .img {
       width: 100%;
       height: 100%;
       position: relative;
+      @media (max-width: 768px) {
+      }
       .imag {
         position: relative;
         width: 100%;
         height: 458px;
         object-fit: cover;
         border-radius: 12px;
+        @media (max-width: 768px) {
+          height: 124px;
+          border-radius: 3.25px;
+        }
       }
       .btns {
         position: absolute;
@@ -63,12 +86,24 @@
         padding: 6px 7px 6px 7px;
         border-radius: 30px;
         box-shadow: #525150;
+        @media (max-width: 768px) {
+          top: 70px;
+
+          padding: 2.4px 4.2px 2.4px 4.2px;
+          width: 202px;
+          gap: 6px;
+        }
 
         .btnOne {
           width: 111px;
           height: 38px;
           border-radius: 30px;
           border: 1px solid #ffffffcc;
+          @media (max-width: 768px) {
+            width: 68px;
+            height: 24px;
+            border-radius: 18px;
+          }
 
           &:hover {
             background-color: #525150;
@@ -83,6 +118,9 @@
             line-height: 100%;
             letter-spacing: 0%;
             color: #181817;
+            @media (max-width: 768px) {
+              font-size: 8px;
+            }
             &:hover {
               color: #ffffff;
             }
@@ -94,6 +132,11 @@
           height: 38px;
           border-radius: 30px;
           border: 1px solid #ffffffcc;
+          @media (max-width: 768px) {
+            width: 68px;
+            height: 24px;
+            border-radius: 18px;
+          }
 
           &:hover {
             background-color: #525150;
@@ -108,6 +151,9 @@
             line-height: 100%;
             letter-spacing: 0%;
             color: #181817;
+            @media (max-width: 768px) {
+              font-size: 8px;
+            }
             &:hover {
               color: #ffffff;
             }
@@ -118,6 +164,11 @@
           height: 38px;
           border-radius: 30px;
           border: 1px solid #ffffffcc;
+          @media (max-width: 768px) {
+            width: 68px;
+            height: 24px;
+            border-radius: 18px;
+          }
 
           &:hover {
             background-color: #525150;
@@ -133,6 +184,9 @@
             line-height: 100%;
             letter-spacing: 0%;
             color: #181817;
+            @media (max-width: 768px) {
+              font-size: 8px;
+            }
             &:hover {
               color: #ffffff;
             }
@@ -146,14 +200,19 @@
       grid-template-columns: repeat(4, 1fr);
       grid-template-rows: repeat(2, 1fr);
       gap: 26px;
-
       padding-bottom: 1rem;
+      @media (max-width: 768px) {
+        display: none;
+      }
+
       .content {
         width: 100%;
         height: 100%;
+
         .imag {
           width: 100%;
           height: 320px;
+
           img {
             object-fit: cover;
             width: 100%;
@@ -171,11 +230,13 @@
           flex-direction: column;
           padding: 10px 0px 20px 10px;
           border-radius: 0px 0px 8px 8px;
+
           .text {
             display: flex;
             flex-direction: column;
             gap: 2px;
-            h1 {
+
+            p {
               width: 160px;
               height: 25px;
               font-family: Open Sans;
@@ -184,6 +245,7 @@
               line-height: 100%;
               letter-spacing: 0%;
             }
+
             .naira {
               width: 160px;
               height: 25px;
@@ -194,9 +256,11 @@
               letter-spacing: 0%;
             }
           }
+
           .btnSpace {
             display: flex;
             gap: 12px;
+
             .btn {
               width: 91px;
               height: 30px;
@@ -211,7 +275,6 @@
               p {
                 width: 71px;
                 height: 19px;
-
                 font-family: Open Sans;
                 font-weight: 500;
                 font-size: 14px;
@@ -231,6 +294,7 @@
               border-radius: 30px;
               border: #db5825;
               background-color: #db5825;
+
               p {
                 font-family: Open Sans;
                 font-weight: 500;
@@ -244,25 +308,147 @@
         }
       }
     }
+    .mobileProduct {
+      display: none;
+      @media (max-width: 768px) {
+        display: grid;
+        grid-template-columns: repeat(4, 1fr);
+        grid-template-rows: repeat(2, 1fr);
+        justify-content: space-between;
+        margin-bottom: 2rem;
+        width: 100%;
+      }
+      .content {
+        width: 100%;
+        height: 141px;
+
+        border-radius: 2.18px;
+        display: flex;
+        flex-direction: column;
+        .wrapper {
+          width: 100%;
+          height: 100%;
+          img {
+            width: 85px;
+            height: 87px;
+            object-fit: cover;
+          }
+        }
+        .txtContent {
+          width: 86px;
+          // height: 54px;
+          height: 100%;
+          background-color: #fafafa;
+          padding-top: 0.4px;
+          display: flex;
+          flex-direction: column;
+          justify-content: space-between;
+          gap: 0px;
+          padding-bottom: 10px;
+          .upTxt {
+            width: 100%;
+            margin: 0 auto;
+            height: auto;
+            h6 {
+              font-family: Open Sans;
+              font-weight: 400;
+              font-size: 10px;
+              line-height: 100%;
+              letter-spacing: 0%;
+            }
+            p {
+              font-family: Open Sans;
+              font-weight: 700;
+              font-size: 8px;
+              line-height: 100%;
+              letter-spacing: 0%;
+              color: #db5825;
+            }
+          }
+          .button {
+            width: 100%;
+            height: auto;
+            margin: 0 auto;
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between;
+            gap: 0px;
+
+            .btnView {
+              display: flex;
+              gap: 3.26px;
+              .btn {
+                width: 39px;
+                height: 12px;
+                border-radius: 8.16px;
+                border: 0.27px solid #000;
+                padding: 2px;
+                p {
+                  width: 31px;
+                  height: 8px;
+                  font-family: Open Sans;
+                  font-weight: 500;
+                  font-size: 6px;
+                  line-height: 100%;
+                  letter-spacing: 0%;
+                }
+              }
+              .btnAdd {
+                width: 37px;
+                height: 12px;
+                outline: none;
+                border: 0.27px solid #db5825;
+
+                border-radius: 8.16px;
+                padding: 2px;
+                background-color: #db5825;
+                p {
+                  width: 33px;
+                  height: 8px;
+                  font-family: Open Sans;
+                  font-weight: 500;
+                  font-size: 6px;
+                  line-height: 100%;
+                  letter-spacing: 0%;
+                  color: #ffffff;
+                }
+              }
+            }
+          }
+        }
+      }
+    }
+
     .slides {
       display: grid;
       grid-template-columns: repeat(3, 1fr);
       grid-template-rows: repeat(1, 1fr);
       gap: 8px;
+      @media (max-width: 768px) {
+        display: none;
+      }
 
       .wrapper {
         width: 100%;
+        // max-width: 1320px;
         height: 100%;
-        gap: 22px;
+        // gap: 10px;
+        justify-content: space-between;
         display: flex;
         flex-direction: column;
+        @media (max-width: 768px) {
+        }
         .imag {
           width: 100%;
           height: 628px;
+          @media (max-width: 768px) {
+          }
           img {
             width: 90%;
             height: 100%;
             object-fit: cover;
+            @media (max-width: 768px) {
+            }
           }
         }
         .text {
@@ -271,6 +457,9 @@
           gap: 12px;
           width: 100%;
           height: 80px;
+          margin-top: 1em;
+          @media (max-width: 768px) {
+          }
           h1 {
             width: 422px;
             height: 50px;
@@ -279,6 +468,8 @@
             font-size: 18px;
             line-height: 100%;
             letter-spacing: 0%;
+            @media (max-width: 768px) {
+            }
           }
           .btn {
             width: 120px;
@@ -292,16 +483,82 @@
             background-color: #525150;
             border: 0.5px solid #525150;
             outline: none;
+            @media (max-width: 768px) {
+            }
             p {
               width: 102px;
               height: 19px;
-
+              text-align: center;
               font-family: Open Sans;
               font-weight: 500;
               font-size: 14px;
               line-height: 100%;
               letter-spacing: 0%;
               color: #fff;
+              @media (max-width: 768px) {
+              }
+            }
+          }
+        }
+      }
+    }
+    .mobileSlides {
+      display: none;
+      @media (max-width: 768px) {
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        grid-template-rows: repeat(1, 1fr);
+        // gap: 6px;
+        justify-content: space-between;
+      }
+      .wrapper {
+        width: 100%;
+        height: 100%;
+        gap: 0px;
+        display: flex;
+        flex-direction: column;
+        .imag {
+          width: 100%;
+          height: 100%;
+          img {
+            width: auto;
+            height: 170px;
+          }
+        }
+        .texts {
+          display: flex;
+          flex-direction: column;
+          gap: 3.25px;
+          width: 100%;
+          height: auto;
+          h1 {
+            width: 114px;
+            height: 33px;
+            font-family: Open Sans;
+            font-weight: 500;
+            font-size: 8px;
+            line-height: 100%;
+            letter-spacing: 0%;
+          }
+          .bt {
+            width: 66px;
+            border-radius: 8.16px;
+            padding: 4px;
+            background-color: #525150;
+            border: 1px solid #525150;
+            display: flex;
+            align-items: center;
+            outline: none;
+            p {
+              width: 58px;
+              height: 11px;
+              font-family: Open Sans;
+              font-weight: 500;
+              font-size: 7px;
+              line-height: 100%;
+              letter-spacing: 0%;
+              color: #fff;
+              text-align: center;
             }
           }
         }
