--- a/src/feature/prod/component/header/styles.module.scss
+++ b/src/feature/prod/component/header/styles.module.scss
@@ -4,17 +4,21 @@
     position: relative;
     width: 100%;
     height: 275px;
-    // background: ;
-    // // backdrop-filter: blur(6px)
+    overflow: hidden;
     opacity: 90%;
-
-    
+    @media (max-width: 768px) {
+    }
 
     .image {
       width: 100%;
       height: 100%;
-      object-fit: cover; // makes image cover the whole area nicely
+      object-fit: cover;
       display: block;
+      @media (max-width: 768px) {
+        position: absolute;
+        z-index: 0;
+        filter: blur(6px);
+      }
     }
     .alignCenter {
       position: absolute;
@@ -25,13 +29,17 @@
       display: flex;
       flex-direction: column;
       gap: 41px;
+      @media (max-width: 768px) {
+        gap: 22px;
+      }
       h1 {
         font-family: Roboto Serif;
         font-weight: 700;
         font-size: 32px;
         line-height: 100%;
         letter-spacing: 0%;
-        // text-align: center;
+        @media (max-width: 768px) {
+        }
       }
       p {
         width: 340px;
@@ -43,6 +51,11 @@
         letter-spacing: 0%;
         text-align: center;
         color: #1d1d1d;
+        @media (max-width: 768px) {
+          width: 271px;
+          height: 32px;
+          font-size: 14px;
+        }
       }
     }
   }
@@ -51,6 +64,11 @@
     align-items: center;
     justify-content: space-between;
     padding: 40px 60px 30px 60px;
+    @media (max-width: 768px) {
+      margin-top: 2rem;
+      padding: 0 16px;
+    }
+
     .firstFilter {
       display: flex;
       gap: 16px;
@@ -58,23 +76,40 @@
       .contentOne {
         display: flex;
         gap: 16px;
-        // .link {
-        //   width: 39px;
-        //   height: 34px;
-        //   padding: 6.8px 9.1px 6.8px 9.1px;
-        //   border-radius: 4px;
-        //   background-color: #000;
-        // }
+        align-items: center;
+        @media (max-width: 768px) {
+          gap: 10px;
+        }
+        .check_icon {
+          @media (max-width: 768px) {
+            width: 27px;
+            height: 23px;
+          }
+        }
+
         .all {
           display: flex;
           align-items: center;
           gap: 4px;
+          @media (max-width: 768px) {
+            gap: 10px;
+          }
           p {
             font-family: Open Sans;
             font-weight: 400;
             font-size: 16px;
             line-height: 100%;
             letter-spacing: 0%;
+            @media (max-width: 768px) {
+              width: 19px;
+              height: 22px;
+            }
+          }
+          .drop_down {
+            @media (max-width: 768px) {
+              height: 24px;
+              width: 24px;
+            }
           }
         }
       }
@@ -82,6 +117,9 @@
         list-style: none;
         display: flex;
         gap: 20px;
+        @media (max-width: 768px) {
+          display: none;
+        }
         li {
           opacity: 0.45;
           p {
@@ -107,12 +145,22 @@
       align-items: center;
       background-color: #525150;
       color: #fff;
+      @media (max-width: 768px) {
+        padding: 7px 8px;
+        width: 72px;
+        height: 32px;
+        border-radius: 6px;
+        gap: 8px;
+      }
       p {
         font-family: Open Sans;
         font-weight: 400;
         font-size: 16px;
         line-height: 100%;
         letter-spacing: 0%;
+        @media (max-width: 768px) {
+          font-size: 12px;
+        }
       }
     }
   }
