--- a/src/feature/prod/component/navbar/styles.module.scss
+++ b/src/feature/prod/component/navbar/styles.module.scss
@@ -1,5 +1,8 @@
 .content {
   width: 100%;
+  @media (max-width: 768px) {
+    margin-bottom: 3rem;
+  }
 
   .Navbar {
     width: 100%;
@@ -7,11 +10,38 @@
     justify-content: space-between;
     align-items: center;
     padding: 20px 50px;
-
+    @media (max-width: 768px) {
+      padding: 6px 16px;
+    }
+    .hamburg {
+      display: none;
+      @media (max-width: 768px) {
+        display: flex;
+      }
+    }
+    .link {
+      @media (max-width: 768px) {
+        width: 100%;
+        height: 100%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+      }
+      .frame {
+        @media (max-width: 768px) {
+          width: 112px;
+          height: 28px;
+          object-fit: cover;
+        }
+      }
+    }
     .list {
       width: 446px;
       // height: 23px;
       height: 26px;
+      @media (max-width: 768px) {
+        display: none;
+      }
 
       ul {
         list-style: none;
@@ -75,6 +105,9 @@
       .inputField {
         position: relative;
         width: 100%;
+        @media (max-width: 768px) {
+          display: none;
+        }
         //   max-width: 243px;
 
         .field {
@@ -99,6 +132,18 @@
         gap: 16px;
         width: 79px;
         height: 32px;
+        align-items: center;
+        @media (max-width: 768px) {
+          gap: 10px;
+        }
+        .icons {
+          display: none;
+          @media (max-width: 768px) {
+            display: block;
+            width: 50px;
+            height: 13.33px;
+          }
+        }
       }
     }
   }
