--- a/src/feature/table/component/style.module.scss
+++ b/src/feature/table/component/style.module.scss
@@ -4,10 +4,18 @@
   padding-right: 60px;
   padding-top: 40px;
   padding-bottom: 40px;
+  @media (max-width: 768px) {
+    padding: 0px 20px;
+    margin-bottom: 2rem;
+  }
   .checkOut {
     display: flex;
     align-items: center;
     gap: 10px;
+    @media (max-width: 768px) {
+      gap: 20px;
+      margin-bottom: 2em;
+    }
     p {
       font-family: Open Sans;
       font-weight: 400;
@@ -15,6 +23,12 @@
       line-height: 24px;
       letter-spacing: 0%;
       text-align: center;
+      @media (max-width: 768px) {
+        font-family: Roboto Serif;
+        font-weight: 400;
+        font-size: 20px;
+        letter-spacing: 0%;
+      }
     }
   }
   .tableGrid {
@@ -24,6 +38,9 @@
     gap: 21px;
     width: 100%;
     height: 438px;
+    @media (max-width: 768px) {
+      display: none;
+    }
     .row {
       display: grid;
       grid-template-columns: 2fr 1fr 1fr 1fr 2fr;
@@ -157,6 +174,9 @@
     height: 202px;
     margin-top: 20px;
     margin-bottom: 20px;
+    @media (max-width: 768px) {
+      display: none;
+    }
     .headers {
       display: flex;
       padding: 10px;
@@ -214,6 +234,147 @@
         border-radius: 4px;
         background-color: #db5825;
         border: 0.5px solid #db5825;
+        p {
+          font-family: Open Sans;
+          font-weight: 500;
+          font-size: 16px;
+          line-height: 24px;
+          letter-spacing: 0%;
+          color: #fafafa;
+        }
+      }
+    }
+  }
+  .mobileProd {
+    display: none;
+    @media (max-width: 768px) {
+      display: flex;
+      flex-direction: column;
+      gap: 20px;
+      width: 100%;
+      max-width: 100%;
+      height: 100%;
+      margin-bottom: 1em;
+    }
+
+    .cover {
+      display: flex;
+      flex-direction: column;
+      gap: 6px;
+      // padding: 8px 0px;
+      padding-top: 8px;
+      padding-bottom: 8px;
+      border-bottom: 1px solid #e7e7e7;
+      // height: 100%;
+      // width: 100%;
+      // max-width: 392px;
+
+      .imgContent {
+        display: flex;
+        gap: 12px;
+        align-items: center;
+        width: 100%;
+        max-width: 344px;
+        height: 41px;
+        .para {
+          display: flex;
+          justify-content: space-between;
+
+          .txt {
+            display: flex;
+            gap: 6px;
+            flex-direction: column;
+            width: 120px;
+            height: 39px;
+
+            .name {
+              height: 14px;
+              font-family: Open Sans;
+              font-weight: 500;
+              font-size: 10px;
+              line-height: 100%;
+              letter-spacing: 0%;
+            }
+            .price {
+              height: 19px;
+              font-family: Open Sans;
+              font-weight: 500;
+              font-size: 14px;
+              line-height: 100%;
+              letter-spacing: 0%;
+              color: #7a7a7a;
+            }
+          }
+        }
+      }
+      .btnAmount {
+        display: flex;
+        width: 100%;
+        max-width: 344px;
+        height: 29px;
+        justify-content: space-between;
+        align-items: center;
+        .size {
+          display: flex;
+          padding: 6.24px;
+          gap: 6.24px;
+          color: 6.24px;
+          border-radius: 10px;
+          width: 63px;
+          height: 30px;
+          background-color: #f8f8f8;
+          align-items: center;
+          p {
+            font-family: Open Sans;
+            font-weight: 700;
+            font-size: 9.98px;
+            line-height: 100%;
+            letter-spacing: 0%;
+            color: #7a7a7a;
+          }
+        }
+        .sizeChange {
+          display: flex;
+          gap: 14.24px;
+          padding: 8.5px 19px;
+          border-radius: 10px;
+          align-items: center;
+          justify-content: center;
+          width: 120px;
+          height: 28px;
+          background-color: #db5825;
+          color: #f1f1f1;
+          p {
+            width: 8.75px;
+          }
+        }
+      }
+    }
+  }
+  .calculationBtn {
+    padding: 21px 6px;
+    width: 100%;
+    height: 202px;
+    box-shadow: 0px 3px 4px 0px #0000000d;
+    display: flex;
+    gap: 12px;
+    flex-direction: column;
+    .amt {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+    }
+    .btn {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      .btnSubmit {
+        padding: 16px 48px;
+        width: 100%;
+        height: 56px;
+        border-radius: 4px;
+        background-color: #db5825;
+        border: 1px solid #db5825;
         p {
           font-family: Open Sans;
           font-weight: 500;
