--- a/src/feature/homepage/component/hero/styles.module.scss
+++ b/src/feature/homepage/component/hero/styles.module.scss
@@ -1,12 +1,15 @@
 .hero {
+  margin-top: 5.5rem;
   display: flex;
   flex-direction: column;
   gap: 32px;
   width: 100%;
   // height: 293px;
   align-items: center;
-  margin-bottom: 10px;
-  //   justify-content: center;
+  margin-bottom: 1rem;
+  @media (max-width: 768px) {
+    margin-top: 2rem;
+  }
   .fullWidth {
     // width: 862px;
     display: flex;
@@ -93,7 +96,10 @@
             line-height: 100%;
             letter-spacing: 0%;
             color: #fff;
-            // vertical-align: middle;
+            display: flex;
+            justify-content: center;
+            text-align: center;
+            vertical-align: middle;
           }
         }
       }
