--- a/src/feature/homepage/component/midsection/styles.module.scss
+++ b/src/feature/homepage/component/midsection/styles.module.scss
@@ -420,19 +420,17 @@
     }
 
     .slides {
-      display: grid;
-      grid-template-columns: repeat(3, 1fr);
-      grid-template-rows: repeat(1, 1fr);
-      gap: 8px;
+      display: flex;
+      // gap: 26px;
+      justify-content: space-between;
+      width: 100%;
       @media (max-width: 768px) {
         display: none;
       }
 
       .wrapper {
         width: 100%;
-        // max-width: 1320px;
         height: 100%;
-        // gap: 10px;
         justify-content: space-between;
         display: flex;
         flex-direction: column;
@@ -441,10 +439,11 @@
         .imag {
           width: 100%;
           height: 628px;
+          overflow: hidden;
           @media (max-width: 768px) {
           }
           img {
-            width: 90%;
+            width: 405px;
             height: 100%;
             object-fit: cover;
             @media (max-width: 768px) {
@@ -454,14 +453,14 @@
         .text {
           display: flex;
           flex-direction: column;
-          gap: 12px;
+          gap: 8px;
           width: 100%;
           height: 80px;
           margin-top: 1em;
           @media (max-width: 768px) {
           }
           h1 {
-            width: 422px;
+            width: auto;
             height: 50px;
             font-family: Open Sans;
             font-weight: 500;
@@ -475,14 +474,13 @@
             width: 120px;
             height: 40px;
             gap: 10px;
-            padding-top: 6px;
-            padding-right: 10px;
-            padding-bottom: 6px;
-            padding-left: 10px;
+            padding: 10px 6px;
             border-radius: 30px;
             background-color: #525150;
             border: 0.5px solid #525150;
-            outline: none;
+            display: flex;
+            align-items: center;
+            justify-content: center;
             @media (max-width: 768px) {
             }
             p {
@@ -502,6 +500,7 @@
         }
       }
     }
+
     .mobileSlides {
       display: none;
       @media (max-width: 768px) {
