--- a/src/feature/product/component/content-one/styles.module.scss
+++ b/src/feature/product/component/content-one/styles.module.scss
@@ -47,6 +47,7 @@
     width: 100%;
     display: flex;
     gap: 94px;
+    // justify-content: space-between;
     @media (max-width: 768px) {
       flex-direction: column;
       gap: 90px;
@@ -65,6 +66,7 @@
           //   padding-right: 108px;
           //   padding-left: 108px;
           border-radius: 18px;
+          object-fit: cover;
           @media (max-width: 768px) {
           }
         }
