--- a/src/feature/product/component/content-two/styles.module.scss
+++ b/src/feature/product/component/content-two/styles.module.scss
@@ -6,7 +6,8 @@
   .contentWrapper {
     padding: 20px 60px 20px 60px;
     display: flex;
-    gap: 211px;
+    gap: 130px;
+    // justify-content: space-between;
     height: 684px;
     @media (max-width: 768px) {
       padding: 16px 20px;
@@ -169,7 +170,7 @@
           .line {
             display: flex;
             align-items: center;
-            gap: 8px;
+            gap: 37px;
             @media (max-width: 768px) {
             }
           }
